# liblm

./: .gitignore  .npmrc  compress_packages.sh  fresh_one.sh  lerna.json  package.json  pnpm-lock.yaml  rollup.config.js  styleguide.config.js  syn-after-release.ps1  typings.d.ts
.github/workflows/: npm-publish-legacy.yml  npm-publish.yml
.nx/cache/: run.json
.nx/cache/terminalOutputs/: 3673147367106734582  3916389326042673256  5804166630397140643
.nx/workspace-data/: file-map.json  lockfile-nodes.hash  nx_files.nxt  parsed-lock-file.dependencies.json  parsed-lock-file.nodes.json  project-graph.json  source-maps.json
helper/: .env  Cargo.toml  build.rs  config.json  deploy.ps1  deploy.sh  index.js  out.html  out1.html  test.html
helper/js/: key.js
helper/src/: lib.rs
helper/src/client_cmds/: build.rs  commands.rs  fresh.rs  install.rs  mod.rs  pick_color.rs  proxy_local.rs  serve_at.rs  start.rs
helper/src/server_routes/: build_dep.rs  check_version.rs  home.rs  mod.rs  pack_all.rs  server_state.rs  test_route.rs
helper/src/utils/: check_version.rs  client_update.rs  constant.rs  helper_fn.rs  message.rs  mod.rs  proxy.rs
helper/tests/: html.rs  proxy.rs
scripts/: tmp_server.mjs
